--- a/style.css
+++ b/style.css
@@ -1,60 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
-    /* width not affected by padding or border */
-    box-sizing: border-box;
+  /* width not affected by padding or border */
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    display: flex;
-    /* Centered horizontally */
-    align-items: center; 
-    /* Centered vertically on 100% viewport */
-    justify-content: center;
-    /* 100% viewport height  */
-    height: 100vh;
-    /* no margins  */
-    margin: 0;
+  font-family: "Roboto", sans-serif;
+  background-color: rgba(102, 51, 153, 0.7);
+  display: flex;
+  /* Centered horizontally */
+  align-items: center;
+  /* Centered vertically on 100% viewport */
+  justify-content: center;
+  /* 100% viewport height  */
+  height: 100vh;
+  /* no margins  */
+  margin: 0;
 }
 
 img {
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
+  width: 500px;
+  object-fit: cover;
 }
 
 .carousel {
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    height: 530px;
-    width: 500px;
-    overflow: hidden;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  height: 530px;
+  width: 500px;
+  overflow: hidden;
 }
 
 .image-container {
-    display: flex;
-    transform: translateX(0);
-    transition: transform 0.5s ease-in-out;
+  display: flex;
+  transform: translateX(0px);
+  transition: transform 0.5s ease-in-out;
+  height: 500px;
 }
 
 .buttons-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .btn {
-    background-color: rebeccapurple;
-    color: #fff;
-    border: none;
-    padding: 0.5rem;
-    cursor: pointer;
-    width: 49.5%;
+  background-color: rebeccapurple;
+  color: #fff;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  width: 49.5%;
 }
 
 .btn:hover {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 
 .btn:focus {
-    outline: 2px solid rebeccapurple;
+  outline: 2px solid rebeccapurple;
 }
